# particles

./: .gitignore  Makefile  README.md  fluidsim.cabal  particles.cabal
app/: .Main.hs.swp  Main.hs  Vector2.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
