cabal-version:      2.4
name:               fluidsim
version:            0.1.0.0
author:             Mitchell Vitez
maintainer:         mitchell@vitez.me

extra-source-files: CHANGELOG.md

executable fluidsim
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    base >=4.14.3.0, GLFW-b, OpenGL, OpenGLRaw, vector, time
    hs-source-dirs:   app
    default-language: Haskell2010
